Correction login, ajout total count des clients, PUT client, correction z-index modal

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,7 +27,7 @@ h1 {
   transition: all ease 0.01s;
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   left: 0;
   top: 0;
   width: 100%;
